--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
         <h1>s1n1f | Bio check</h1>
         <p>discord.gg/terractov</p>
         <a href="https://discord.com/invite/terractov" target="_blank" style="color: #a494b9; font-size: 24px;"><i class="fab fa-discord"></i></a>
+        <a href="https://t.me/royzdev" target="_blank" style="color: #a494b9; font-size: 24px;"><i class="fab fa-telegram"></i></a>
         <a href="https://t.me/+3iG87fEW8zczM2Ni" target="_blank" style="color: #a494b9; font-size: 24px;"><i class="fab fa-telegram"></i></a>
-        <a href="https://t.me/+3iG87fEW8zczM2Ni" target="_blank" style="color: #a494b9; font-size: 24px;"><i class="fab fa-vk"></i></a>
     </div>
 
     <audio autoplay>
