--- a/royz.html
+++ b/royz.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         @font-face {
-            font-family: 'Days Sans Black';
-            src: url('Days Sans Black.otf') format('truetype');
+            font-family: 'hecativas-4';
+            src: url('hecativas-4.ttf') format('truetype');
             font-weight: normal;
             font-style: normal;
         }
@@ -17,7 +17,7 @@
         body {
             background-color: #0f0f0f;
             color: white;
-            font-family: 'Days Sans Black', sans-serif;
+            font-family: 'hecativas-4', sans-serif;
             text-align: center;
             margin: 0;
             padding: 0;
