--- a/royz.html
+++ b/royz.html
@@ -83,8 +83,8 @@
     <div id="particles-js"></div>
     <div class="content">
         <img src="royz.jpg" alt="royz" class="round">
-        <h1>s1n1f | Check bio</h1>
-        <p>+888 0001 0005 - dolboeb</p>
+        <h1>S1N1F | CHECK BIO</h1>
+        <p>+888 0001 0005 - DOLBOEB</p>
         <a href="discord.gg/terractov" target="_blank" style="color: #a494b9; font-size: 24px;"><i class="fab fa-discord"></i></a>
         <a href="https://t.me/royzdev" target="_blank" style="color: #a494b9; font-size: 24px;"><i class="fab fa-telegram"></i></a>
         <a href="https://t.me/+3iG87fEW8zczM2Ni" target="_blank" style="color: #a494b9; font-size: 24px;"><i class="fab fa-telegram"></i></a>
