--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         @font-face {
-            font-family: 'hecativas-4';
-            src: url('hecativas-4.ttf') format('truetype');
+            font-family: 'RAYDIS';
+            src: url('RAYDIS.ttf') format('truetype');
             font-weight: normal;
             font-style: normal;
         }
@@ -17,7 +17,7 @@
         body {
             background-color: #0f0f0f;
             color: white;
-            font-family: 'hecativas-4', sans-serif;
+            font-family: 'RAYDIS', sans-serif;
             text-align: center;
             margin: 0;
             padding: 0;
