--- a/royz.html
+++ b/royz.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         @font-face {
-            font-family: 'hecativas-4';
-            src: url('hecativas-4.ttf') format('truetype');
+            font-family: 'RAYDIS';
+            src: url('RAYDIS.ttf') format('truetype');
             font-weight: normal;
             font-style: normal;
         }
@@ -17,7 +17,7 @@
         body {
             background-color: #0f0f0f;
             color: white;
-            font-family: 'hecativas-4', sans-serif;
+            font-family: 'RAYDIS', sans-serif;
             text-align: center;
             margin: 0;
             padding: 0;
@@ -83,8 +83,8 @@
     <div id="particles-js"></div>
     <div class="content">
         <img src="royz.jpg" alt="royz" class="round">
-        <h1>S1N1F | CHECK BIO</h1>
-        <p>+888 0001 0005 - DOLBOEB</p>
+        <h1>s1n1f | check bio</h1>
+        <p>+888 0001 0005 - dolboeb</p>
         <a href="discord.gg/terractov" target="_blank" style="color: #a494b9; font-size: 24px;"><i class="fab fa-discord"></i></a>
         <a href="https://t.me/royzdev" target="_blank" style="color: #a494b9; font-size: 24px;"><i class="fab fa-telegram"></i></a>
         <a href="https://t.me/+3iG87fEW8zczM2Ni" target="_blank" style="color: #a494b9; font-size: 24px;"><i class="fab fa-telegram"></i></a>
