--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         @font-face {
-            font-family: 'RAYDIS';
-            src: url('RAYDIS.ttf') format('truetype');
+            font-family: 'Antietamxtraexpand';
+            src: url('Antietamxtraexpand.ttf') format('truetype');
             font-weight: normal;
             font-style: normal;
         }
@@ -17,7 +17,7 @@
         body {
             background-color: #0f0f0f;
             color: white;
-            font-family: 'RAYDIS', sans-serif;
+            font-family: 'Antietamxtraexpand', sans-serif;
             text-align: center;
             margin: 0;
             padding: 0;
@@ -83,7 +83,7 @@
     <div id="particles-js"></div>
     <div class="content">
         <img src="royz.jpg" alt="royz" class="round">
-        <h1>s1n1f | bio check</h1>
+        <h1>s1n1f</h1>
         <p>++888 0001 0005 - dolboeb</p>
         <a href="https://discord.com/invite/terractov" target="_blank" style="color: #a494b9; font-size: 24px;"><i class="fab fa-discord"></i></a>
         <a href="https://t.me/royzdev" target="_blank" style="color: #a494b9; font-size: 24px;"><i class="fab fa-telegram"></i></a>
