--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div class="content">
         <img src="royz.jpg" alt="royz" class="round">
         <h1>S1N1F</h1>
-        <p>best clnx - https://discord.gg/dFWeNh6nNm</p>
+        <p>best clnx - Normusky Global</p>
         <a href="https://discord.gg/dFWeNh6nNm" target="_blank" style="color: #a494b9; font-size: 24px;"><i class="fab fa-discord"></i></a>
         <a href="https://t.me/royzdev" target="_blank" style="color: #a494b9; font-size: 24px;"><i class="fab fa-telegram"></i></a>
         <a href="https://t.me/+3iG87fEW8zczM2Ni" target="_blank" style="color: #a494b9; font-size: 24px;"><i class="fab fa-telegram"></i></a>
